Set up some basic styling

--- a/index.html
+++ b/index.html
@@ -2,4 +2,8 @@
 layout: default
 title: Home
 ---
-<h1>{{"Hello World!" | downcase}}</h1>
+
+<div id="home">
+    <h1>Home</h1>
+    <p>Bryce Crist</p>
+</div>
