Added more CSS styling and added a contact page in favor of the about page.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ title: Home
 ---
 
 <div id="home">
-    <h1>Home</h1>
-    <p>Bryce Crist</p>
+    <h1>MochaMethod</h1>
+    <div id="intro">
+        <p>Howdy? I'm Bryce Crist, a programmer, QA testing technician and release manager, musician, and cook.</p>
+    </div>
 </div>
