--- a/index.html
+++ b/index.html
@@ -5,7 +5,49 @@ title: Home
 
 <div id="home">
     <h1>MochaMethod</h1>
-    <div id="intro">
-        <p>Howdy? I'm Bryce Crist, a programmer, QA testing technician and release manager, musician, and cook.</p>
-    </div>
+    <section id="generalInfo">
+        <div id="intro">
+            <p>Howdy? I'm Bryce Crist, a programmer, QA testing technician and release manager, musician, and cook.</p>
+        </div>
+        <div id="skills">
+            <div id="skillGroup1">
+                <p id="progTitle">Languages:</p>
+                <div id="programming">
+                    <div id="langs">
+                        <div id="progGroup1">
+                            <p>Python</p>
+                            <p>C#</p>
+                        </div>
+                        <div id="progGroup2">
+                            <p>C/C++</p>
+                            <p>Javascript</p>
+                        </div>
+                        <div id="progGroup3">
+                            <p>Java</p>
+                            <p>SQL</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="skillGroup2">
+                <p id="techTitle">Technologies:</p>
+                <div id="technologies">
+                    <div id="techs">
+                        <div id="techGroup1">
+                            <p>AWS</p>
+                            <p>Jira</p>
+                        </div>
+                        <div id="techGroup2">
+                            <p>Github</p>
+                            <p>Twilio</p>
+                        </div>
+                        <div id="techGroup3">
+                            <p>Unity3D</p>
+                            <p>NodeJs</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>  
 </div>
