Added a section for projects and blog posts. Updated CSS a bit.

--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,10 @@ title: Blog
 <ul>
   {% for post in site.posts %}
     <li>
-      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+      <p>
+        <a href="{{ post.url }}">{{ post.title }}</a>
+      </p>
+      <p>{{ post.date }}</p>
       <p>{{ post.excerpt }}</p>
     </li>
   {% endfor %}
