--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ title: Home
                   </li>
                 {% endfor %}
               </ul>
+              <a id="viewMore" href="./blog.html">View more...</a>
         </div>
     </section>  
     <div id="divider"></div>
