Added a basic fade in effect.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@ title: Home
 ---
 
 <div id="home">
-    <h1>MochaMethod</h1>
     <section id="generalInfo">
+        <h1>MochaMethod</h1>
         <div id="intro">
-            <p>Howdy? I'm Bryce Crist, a programmer, QA testing technician and release manager, musician, and cook.</p>
+            <p id="mainIntro">Howdy? I'm Bryce Crist, a programmer, QA testing technician and release manager, musician, and cook.</p>
+            <p id="subIntro">I have been programming in a variety of languages for nearing 5 years now. <br/>In that time, I have become comfortable with a large number of technologies, libraries, and services including AWS Elastic Search, SQS, and Lambda, Twilio call and messaging features, Atlassian products such as Jira and Confluence, and many more. <br/>
+            </p>
         </div>
         <div id="skills">
             <div id="skillGroup1">
