More redesign. More css. Less Blog worky.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@ title: Home
     <div id="wrapper">
         <div id="intro">
             <div id="headerWrapper">
-                <h1>MochaMethod</h1>
-                <a href="https://github.com/MochaMethod/">
+                <h1 id=me>MochaMethod</h1>
+                <a href="https://github.com/MochaMethod/" rel=nofollow>
                     <img src="../assets/image/github-original.svg" rel=nofollow>
+                </a>
+                <a href="https://www.linkedin.com/in/mochamethod" rel=nofoloow>
+                    <i class="fab fa-linkedin"></i>
                 </a>
             </div>
             <p id="mainIntro">Howdy? I'm Bryce Crist, a programmer, QA testing technician and release manager, musician, and cook.</p>
