Fixed up the contact page a bit. Still needs some work though.

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@ title: Contact
             <p>Email:</p>
             <input id="contactInputEmail" type="email" name="_replyto">
             <p>Message:</p>
-            <input id="contactInputMessage" type="text" name="_message" value="" wrap="physical" rows="1" cols="60" required>
+            <textarea id="contactInputMessage" value="" wrap="physical" rows=20" cols="30" required></textarea>
             <input id="contactSubmit" type="submit" value="Send" disabled>
           </form>
     </div>
