Improved styling of the blog page, as well as small styling tweaks to the home and contact pages.

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@ title: Home
 <section id="general">
     <div id="introWrapper">
         <div id="intro">
-            <h1 id="headElem">Mochamethod</h1>
-            <h2 id="headElem">Howdy! My name is <span>Bryce Crist</span>. I'm a software and web developer, QA testing technician and release manager, a musician, and a cook.</h2>
-            <h3 id="headElem">I've been living in Boise, Idaho for a few years now, but originally grew up in the southern portion of the state. As a teenager and young adult, I grew more interested in the technical aspects of my hobbies, which led me from being a simple PC hobbyist into a proficient programmer and QA technician. </h3>
+            <h1 class="headElem">Mochamethod</h1>
+            <h2 class="headElem">Howdy! My name is <span>Bryce Crist</span>. I'm a software and web developer, QA testing technician and release manager, a musician, and a cook.</h2>
+            <h3 class="headElem">I've been living in Boise, Idaho for a few years now, but originally grew up in the southern portion of the state. As a teenager and young adult, I grew more interested in the technical aspects of my hobbies, which led me from being a simple PC hobbyist into a proficient programmer and QA technician. </h3>
             <a id="contactMe" href="./contact.html">Contact Me!</a>
         </div>
     </div>
     <div id="skillsWrapper">
         <div id="skills">
-            <h3 id="headElem">I'm proficient with a number of languages and technologies, including:</h3>
+            <h3 class="headElem">I'm proficient with a number of languages and technologies, including:</h3>
             <div id="listWrapper">
                 <ul>
                     <li>Python</li>
