--- a/blog.html
+++ b/blog.html
@@ -4,23 +4,26 @@ title: Blog
 ---
 <div id="blogPageWrapper">
   <div id="blogIntro">
-    <h1 id="latestPostsTitle">Latest Posts</h1>
-    <p id="postsSubTitle">
-      These blog posts are written for no one in particular. I guess I'm writing them for my own sake. If someone does happen upon these at any point in time, I hope they enjoy them. If nothing else, I at least hope they provide some insight into who I am and how I think.
-    </p>
+      <div id="marginWrap">
+        <div id="blogIntroWrapper">
+          <h1 class="headElem">Latest Posts</h1>
+          <h3 class="headElem">
+            These blog posts are written for no one in particular. I guess I'm writing them for my own sake. If someone does happen upon these at any point in time, I hope they enjoy them. If nothing else, I at least hope they provide some insight into who I am and how I think.
+          </h3>
+      </div>
+      <ul>
+        {% for post in site.posts %}
+          <li>
+            <p>
+              <a href="{{ post.url }}">{{ post.title }}:</a>
+              <p id="blogPageDate">{{ post.date | date_to_string}}</p>
+            </p>
+            <p id="blogPageExcerpt">{{ post.excerpt }}</p>
+          </li>
+          <div id="divider"></div>
+        {% endfor %}
+      </ul>
+    </div>
   </div>
-
-  <ul>
-    {% for post in site.posts %}
-      <li>
-        <p>
-          <p id="blogPageDate">{{ post.date | date_to_string}}</p>
-          <a href="{{ post.url }}">{{ post.title }}</a>
-        </p>
-        <p id="blogPageExcerpt">{{ post.excerpt }}</p>
-      </li>
-      <div id="divider"></div>
-    {% endfor %}
-  </ul>
 </div>
 
