--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@ title: Contact
 ---
 
 <div id="contact">
-    <h1>Contact Me</h1>
-    <div id="contact">
+    <h1 class=headElem>Contact Me</h1>
+    <div id="contactFormWrapper">
         <form action="https://formspree.io/xeqapwdl" method="POST">
             <p>Name:</p>
             <input id="contactInputName" type="text" name="name" required>
