--- a/blog.html
+++ b/blog.html
@@ -14,11 +14,15 @@ title: Blog
       <ul>
         {% for post in site.posts %}
           <li>
-            <p>
-              <a href="{{ post.url }}">{{ post.title }}:</a>
-              <p id="blogPageDate">{{ post.date | date_to_string}}</p>
-            </p>
-            <p id="blogPageExcerpt">{{ post.excerpt }}</p>
+            <div id="blogPagePostTitle">
+              <p>
+                <a href="{{ post.url }}">{{ post.title }}:</a>
+                <p id="blogPageDate">{{ post.date | date_to_string}}</p>
+              </p>
+            </div>
+            <div id="blogPageExcerpt">
+              <p>{{ post.excerpt }}</p>
+            </div>
           </li>
           <div id="divider"></div>
         {% endfor %}
