--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@ title: Home
     <div id="introWrapper">
         <div id="intro">
             <h1 class="headElem">Mochamethod</h1>
-            <h2 class="headElem">Howdy! My name is <span>Bryce Crist</span>. I'm a software and web developer, QA testing technician and release manager, a musician, and a cook.</h2>
+            <h2 class="headElem">Howdy! My name is <span>Bryce Crist</span>. I'm a Software and Web Developer, QA Software Testing Technician and Release Manager, a Musician, and a Cook.</h2>
             <h3 class="headElem">I've been living in Boise, Idaho for a few years now, but originally grew up in the southern portion of the state. As a teenager and young adult, I grew more interested in the technical aspects of my hobbies, which led me from being a simple PC hobbyist into a proficient programmer and QA technician. </h3>
             <a id="contactMe" href="./contact.html">Contact Me!</a>
         </div>
     </div>
     <div id="skillsWrapper">
         <div id="skills">
-            <h3 class="headElem">I'm proficient with a number of languages and technologies, including:</h3>
+            <h3 class="headElem">I'm proficient with a number of language, technologies, and methodologies including:</h3>
             <div id="listWrapper">
                 <ul>
                     <li>Python</li>
@@ -25,12 +25,15 @@ title: Home
                 </ul>
                 <ul>
                     <li>ReactJS</li>
-                    <li>Microsoft Dotnet</li>
+                    <li>Agile and Scrum</li>
                     <li>Github and Gitlab</li>
-                    <li>Atlassian Jira and Confluence</li>
-                    <li>AWS Lambda, ElasticSearch</li>
+                    <li>Atlassian Jira</li>
+                    <li>Amazon Web Services</li>
                 </ul>
             </div>  
         </div>  
+    </div>
+    <div id="projectsWrapper">
+        <div id="projects"
     </div>
 </section>  
