Removed test blog posts and made my first real one. Wooooo

--- a/blog.html
+++ b/blog.html
@@ -20,9 +20,11 @@ title: Blog
                 <p id="blogPageDate">{{ post.date | date_to_string}}</p>
               </p>
             </div>
+            <a href="{{ post.url }}">
             <div id="blogPageExcerpt">
               <p>{{ post.excerpt }}</p>
             </div>
+          </a>
           </li>
           <div id="divider"></div>
         {% endfor %}
