Added an icon. It's a book with MM on the front to represent my user name. Cleaned up some more styling issues as well.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ title: Home
             </div>
             <h2 class="headElem">Howdy! My name is <span>Bryce Crist</span>. I'm indie Software and Web Programmer, and a professional QA Software Testing Technician and Release Manager.</h2>
             <h3 class="headElem">My other interests include 2D and 3D game development, reading novels -- primarily science fiction and fantasy -- playing guitar, biking, and cooking food.</h3>
+            <h3 class="headElem">If you'd like to know more about me, visit my <a id="blogLink" href="blog.html">blog page</a>. I just started posting in February of 2020. More posts will be coming soon!</h3>
             <a id="contactMe" href="./contact.html">Contact Me!</a>
         </div>
     </div>
