--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@ title: Contact
             <p><span>* </span>Email:</p>
             <input id="contactInputEmail" type="email" name="_replyto">
             <p><span>* </span>Message:</p>
-            <textarea id="contactInputMessage" value="" wrap="physical" rows=20" cols="30" required></textarea>
+            <textarea name="_message" id="contactInputMessage" value="" wrap="physical" rows=20" cols="30" required></textarea>
             <input id="contactSubmit" type="submit" value="Send" disabled>
           </form>
     </div>
