--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: Home
                     <a href="https://www.instagram.com/brycecrisppy/?hl=en" rel="nofollow"><img src="assets/image/instagram.svg"></a>
                 </div>
             </div>
-            <h2 class="headElem">Howdy! My name is <span>Bryce Crist</span>. I'm indie Software and Web Programmer, and a professional QA Software Testing Technician and Release Manager.</h2>
+            <h2 class="headElem">Howdy! My name is <span>Bryce Crist</span>. I'm an indie Software and Web Programmer, and a professional QA Software Testing Technician and Release Manager.</h2>
             <h3 class="headElem">My other interests include 2D and 3D game development, reading novels -- primarily science fiction and fantasy -- playing guitar, biking, and cooking food. If you'd like to know more about me, visit my <a id="blogLink" href="blog.html">blog page</a>. I just started posting in February of 2020. More posts will be coming soon!</h3>
             <a id="contactMe" href="./contact.html">Contact Me!</a>
         </div>
@@ -29,7 +29,7 @@ title: Home
             <div id="listWrapper">
                 <ul>
                     <li>Python</li>
-                    <li>C#/Dotnet</li>
+                    <li>C#/.Net</li>
                     <li>C/C++</li>
                     <li>Javascript/NodeJS/ReactJS</li>
                     <li>HTML/CSS</li>
