--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@ title: Blog
             </div>
             <a href="{{ post.url }}">
             <div id="blogPageExcerpt">
-              <p>{{ post.excerpt }}</p>
+              {{ post.excerpt | strip_html | strip_newlines | truncate: 100 }}  
             </div>
           </a>
           </li>
