Added quite a few things in this commit. First, a new blog post about some weird texts my dad sent me. Second, I've updated some stylings. Third, I've implemented an image selection script. Also updated a couple details on the home page.

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@ title: Home
             <div id="listWrapper">
                 <ul>
                     <li>Python</li>
-                    <li>C#/.Net</li>
+                    <li>C#/.Net/ASP.Net</li>
                     <li>C/C++</li>
-                    <li>Javascript/NodeJS/ReactJS</li>
+                    <li>Javascript/NodeJS</li>
                     <li>HTML/CSS</li>
-                    <li>SQL/PostgreSQL</li>
+                    <li>Java/Kotlin/Spring</li>
                 </ul>
                 <ul>
                     <li>Selenium and Postman</li>
@@ -58,7 +58,7 @@ title: Home
                 </div></li>
                 </a>
 
-                <li><a href="https://github.com/MochaMethod/ChooseYourOwnAdventure" rel="nofollow">Choose Your Own Adventure Game<div>
+                <li><a href="https://github.com/MochaMethod/ChooseYourOwnAdventure" rel="nofollow">Choose Your Own Adventure<div>
                     <p>An on-going project in C# using dotnet and Sadconsole.
                         When finished, the game will follow the player character through an average day-in-the-life-of type situation. However, the mood darkens considerably as the game comes to a climax.  
                     </p>
