--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ title: Home
         <div id="skills">
             <h3 class="headElem">A brief overview of the languages, technologies, and methodologies that I'm proficient with:</h3>
             <div id="listWrapper">
-                <ul>
+                <ul id="listUl1">
                     <li>Python</li>
                     <li>C#/.Net/ASP.Net</li>
                     <li>C/C++</li>
@@ -36,7 +36,7 @@ title: Home
                     <li>HTML/CSS</li>
                     <li>Java/Kotlin/Spring</li>
                 </ul>
-                <ul>
+                <ul id="listUl2">
                     <li>Selenium and Postman</li>
                     <li>Agile and Scrum</li>
                     <li>Github and Gitlab</li>
@@ -53,9 +53,10 @@ title: Home
                 <li>
                     <a href="https://github.com/MochaMethod/MochaMethod.github.io" rel="nofollow">This Website!<div>
                     <p>Come look at the source code for this website! 
+                    Take a peak at how the magic is made! 
                     It was made using Jekyll. While Jekyll includes 
                     website templates, I decided to try a hand at 
-                    designing the site myself.</p>
+                    designing the site myself. </p>
                 </div></li>
                 </a>
 
