Edited styling, text, and size of social media icons on home page and blog page.

--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,7 @@ title: Blog
       <div id="postDivider"></div>
       {% endfor %}
     </ul>
+    <div id="sidebarBottom"></div>
   </nav>
   <div id="blogIntro">
       <div id="marginWrap">
