Edited the skills section and home page intro. Changed the text and styling.

--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@ title: Blog
             </div>
           </a>
           </li>
-          <div id="divider"></div>
+          <div id="blogDivider"></div>
         {% endfor %}
       </ul>
     </div>
