--- a/index.html
+++ b/index.html
@@ -26,22 +26,28 @@ title: Home
     </div>
     <div id="skillsWrapper">
         <div id="skills">
-            <h3 class="headElem">A brief overview of the languages, technologies, and methodologies that I'm proficient with:</h3>
+            <h3 class="headElem">Over the past few years, I have had the pleasure of working on a number of projects. The teams I was apart of enabled me to learn various languages, technologies, and methodologies. Here is an overview of what I'm familiar and proficient with:</h3>
             <div id="listWrapper">
                 <ul id="listUl1">
+                    <h4>Development/Dev Ops</h4>
+                    <div class="skillsDivider"></div>
                     <li>Python</li>
                     <li>C#/.Net</li>
                     <li>C/C++</li>
-                    <li>Javascript/NodeJS</li>
+                    <li>JS/TS/Node</li>
                     <li>HTML/CSS</li>
                     <li>Java/Kotlin</li>
+                    <li>Git</li>
                 </ul>
                 <ul id="listUl2">
-                    <li>Selenium and Postman</li>
+                    <h4>Technologies</h4>
+                    <div class="skillsDivider"></div>
+                    <li>AWS</li>
+                    <li>Selenium, Espresso</li>
+                    <li>Postman (REST/CRUD)</li>
                     <li>Agile and Scrum</li>
                     <li>Github and Gitlab</li>
                     <li>Atlassian Products</li>
-                    <li>Amazon Web Services ( AWS )</li>
                     <li>Unity3D and Blender</li>
                 </ul>
             </div>  
