More small styling fixes on the home page Added another section to the skills section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ title: Home
             <h3 class="headElem">Over the past few years, I have had the pleasure of working on a number of projects. The teams I was apart of enabled me to learn various languages, technologies, and methodologies. Here is an overview of what I'm familiar and proficient with:</h3>
             <div id="listWrapper">
                 <ul id="listUl1">
-                    <h4>Development/Dev Ops</h4>
+                    <h4>Development:</h4>
                     <div class="skillsDivider"></div>
                     <li>Python</li>
                     <li>C# / .Net</li>
@@ -68,7 +68,7 @@ title: Home
                     <li>Git</li>
                 </ul>
                 <ul id="listUl2">
-                    <h4>Technologies</h4>
+                    <h4>Technologies:</h4>
                     <div class="skillsDivider"></div>
                     <li>AWS</li>
                     <li>Selenium, Espresso</li>
@@ -77,6 +77,17 @@ title: Home
                     <li>Github and Gitlab</li>
                     <li>Atlassian Products</li>
                     <li>Unity3D and Blender</li>
+                </ul>
+                <ul id="listUl3">
+                    <h4>Everything Else:</h4>
+                    <div class="skillsDivider"></div>
+                    <li>React / Redux</li>
+                    <li>Django</li>
+                    <li>Java Spring</li>
+                    <li>SQL / PostgreSQL</li>
+                    <li>ElasticSearch / NoSQL</li>
+                    <li>Android Studio</li>
+                    <li>Excel / Google Sheets</li>
                 </ul>
             </div>  
         </div>  
