--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ title: Contact
 <div id="contact">
     <h1 class=headElem>Contact Me</h1>
     <div id="contactFormWrapper">
-        <form action="https://formspree.io/xeqapwdl" method="POST">
+        <form action="https://formspree.io/f/moqpnbla" method="POST">
             <p><span>* </span>Name:</p>
             <input id="contactInputName" type="text" name="name" required>
             <input type="hidden" name="_subject" value="New submission!" required>
@@ -16,5 +16,6 @@ title: Contact
             <textarea name="_message" id="contactInputMessage" value="" wrap="physical" rows=20" cols="30" required></textarea>
             <input id="contactSubmit" type="submit" value="Send" disabled>
           </form>
+          
     </div>
 </div>
